Bees scoring and some refactor